troubleshoot cross origin error
set cross origin to "Anonymous

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title></title>
 </head>
 <body>
-  <img src="./innovation.png">
+  <img id="image" src="zen.png">
   <pre id="output"></pre>
 
   <script src="jquery.js"></script>
